Scripts/nginx-Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: simple-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /welcome
        pathType: Prefix
        backend:
          service:
            name: welcome-service
            port:
              number: 80
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 80
